# wave

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build-wheel.sh
assets/fst/: dlx.fst
assets/vcd/good/: ghdl_0.vcd  ghdl_hdr_only_0.vcd  header_0.vcd  ieee_1364_2001_sample.vcd  picorv32_iverilog.vcd  questa_hdr_only_0.vcd  questa_large_0.vcd  simple_0.vcd  simple_crlf_0.vcd  synopsys_vcd_0.vcd  verilator_riscv.vcd
bindings/: Cargo.toml  Makefile  build.sh  setup.py
bindings/examples/: dump_sim.py
bindings/python/: setup.py
bindings/python/examples/: dump_sim.py
bindings/python/wavetk/: __init__.py
bindings/pywave/: __init__.py
bindings/src/: lib.rs
examples/: fst_read.rs
src/: fst.rs  lib.rs  simulation.rs  types.rs  utils.rs  vcd.rs
tests/: simulation.rs  vcd_parser.rs
utils/: bench.sh  profile.sh
wavetk/: Cargo.toml
wavetk-bindings/: Cargo.toml
wavetk-bindings/src/: lib.rs
wavetk/examples/: fst_read.rs  state_simulation.rs
wavetk/src/: fst.rs  simulation.rs  types.rs  vcd.rs
wavetk/tests/: simulation.rs  vcd_parser.rs
