[package]
name = "wavetk-bindings"
version = "0.4.0"
authors = ["Thomas Hiscock <thomas.hiscock@wanadoo.fr>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "*"
wavetk = { path = "../wavetk" }
serde_json = "^1"
